creacion del menu principal

--- a/Sources/nbproject/private/private.properties
+++ b/Sources/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-j-8.4.0.jar=/home/andres/NetBeansProjects/SGEMaferu/src/conector/mysql-connector-j-8.4.0.jar
 user.properties.file=/home/andres/.netbeans/23/build.properties
